--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,28 +1,66 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - 'v*'
+  workflow_run:
+    workflows: ["Build and Test"]
+    types:
+      - completed
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  guard:
+    name: Evaluate Release Preconditions
+    runs-on: ubuntu-latest
+    outputs:
+      should_release: ${{ steps.evaluate.outputs.should_release }}
+      tag_ref: ${{ steps.evaluate.outputs.tag_ref }}
+    steps:
+      - id: evaluate
+        run: |
+          conclusion=$(jq -r '.workflow_run.conclusion // empty' "$GITHUB_EVENT_PATH")
+          event=$(jq -r '.workflow_run.event // empty' "$GITHUB_EVENT_PATH")
+          ref=$(jq -r '.workflow_run.ref // empty' "$GITHUB_EVENT_PATH")
+
+          echo "tag_ref=$ref" >> $GITHUB_OUTPUT
+
+          if [ "$conclusion" != "success" ] || [ "$event" != "push" ]; then
+            echo "should_release=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [[ "$ref" != refs/tags/v* ]]; then
+            echo "should_release=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          echo "should_release=true" >> $GITHUB_OUTPUT
+
   build-and-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
+    needs: guard
+    if: ${{ needs.guard.outputs.should_release == 'true' }}
+    env:
+      TAG_REF: ${{ needs.guard.outputs.tag_ref }}
     permissions:
       contents: write
       packages: write
     
     steps:
       - uses: actions/checkout@v4
+        with:
+          repository: ${{ github.event.workflow_run.head_repository.full_name }}
+          ref: ${{ github.event.workflow_run.head_sha }}
+          fetch-depth: 0
       
       - name: Extract version from tag
         id: version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        run: |
+          ref="${TAG_REF}"
+          echo "VERSION=${ref#refs/tags/v}" >> $GITHUB_OUTPUT
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
