--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,77 +1,71 @@
 name: Release
 
 on:
-  workflow_run:
-    workflows: ["Build and Test"]
-    types:
-      - completed
+  push:
+    tags:
+      - "v*"
+
+permissions:
+  contents: read
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  guard:
-    name: Evaluate Release Preconditions
+  build_test:
+    name: Build and Test
     runs-on: ubuntu-latest
-    outputs:
-      should_release: ${{ steps.evaluate.outputs.should_release }}
-      tag_ref: ${{ steps.evaluate.outputs.tag_ref }}
     steps:
-      - id: evaluate
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
         run: |
-          conclusion=$(jq -r '.workflow_run.conclusion // empty' "$GITHUB_EVENT_PATH")
-          event=$(jq -r '.workflow_run.event // empty' "$GITHUB_EVENT_PATH")
-          ref=$(jq -r '.workflow_run.ref // empty' "$GITHUB_EVENT_PATH")
+          python -m pip install --upgrade pip
+          pip install -e ".[test]"
 
-          echo "tag_ref=$ref" >> $GITHUB_OUTPUT
+      - name: Run tests
+        run: |
+          pytest --cov=mcp_ssh --cov-report=xml --cov-report=term
 
-          if [ "$conclusion" != "success" ] || [ "$event" != "push" ]; then
-            echo "should_release=false" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          if [[ "$ref" != refs/tags/v* ]]; then
-            echo "should_release=false" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          echo "should_release=true" >> $GITHUB_OUTPUT
-
-  build-and-push:
+  release:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: guard
-    if: ${{ needs.guard.outputs.should_release == 'true' }}
-    env:
-      TAG_REF: ${{ needs.guard.outputs.tag_ref }}
+    needs: build_test
+    if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
       packages: write
-    
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          repository: ${{ github.event.workflow_run.head_repository.full_name }}
-          ref: ${{ github.event.workflow_run.head_sha }}
+          ref: ${{ github.ref }}
           fetch-depth: 0
-      
+
       - name: Extract version from tag
         id: version
         run: |
-          ref="${TAG_REF}"
+          ref="${GITHUB_REF}"
           echo "VERSION=${ref#refs/tags/v}" >> $GITHUB_OUTPUT
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -82,7 +76,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=raw,value=latest,enable={{is_default_branch}}
-      
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -93,7 +87,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
-      
+
       - name: Generate changelog
         id: changelog
         run: |
@@ -104,7 +98,7 @@ jobs:
           else
             echo "CHANGELOG=Release ${{ steps.version.outputs.VERSION }}" >> $GITHUB_OUTPUT
           fi
-      
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
